--- a/Views/ExcelReader/Destin.cshtml
+++ b/Views/ExcelReader/Destin.cshtml
@@ -62,30 +62,32 @@
 @using (Html.BeginForm("Destin", "ExcelReader", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
 <div style="margin-left:100px;margin-top:20px;">
-    <p class="lead">Please select Destination where you want to migrate..</p>
-    <br />
-    <div class="form-row">
-        <lable>Organization:</lable>
-        <select class="form-control" id="Organisation" onchange="populateProjects()" name="Organisation"></select>
-        @*<lable>PAT:</lable><input id="PAT" type="text" name="PAT" onchange="check()" />*@
-    </div>
-    <br />
-    <div class="form-row">
-        @*<lable>Source Project:</lable><input id="SourceProj" type="text" name="SourceProj" onchange="check()" />*@
-        <lable> Destination Project:</lable>
-        @Html.DropDownList("DestionationProj", new SelectList(new List<SelectListItem>()), "<select>", new { @class = "form-control", id = "DestionationProj" })
+    <div class="jumbotron">
+        <p class="lead">Please select Destination where you want to migrate..</p>
+        <br />
+        <div class="row">
+            <div class="form-row col-4">
+                <lable>Organization:</lable>
+                <select class="form-control" id="Organisation" onchange="populateProjects()" name="Organisation"></select>
+                @*<lable>PAT:</lable><input id="PAT" type="text" name="PAT" onchange="check()" />*@
+            </div>
+            <br />
+            <div class="form-row col-4">
+                @*<lable>Source Project:</lable><input id="SourceProj" type="text" name="SourceProj" onchange="check()" />*@
+                <lable> Destination Project:</lable>
+                @Html.DropDownList("DestionationProj", new SelectList(new List<SelectListItem>()), "<select>", new { @class = "form-control", id = "DestionationProj" })
 
-    </div>
-    <br />
-    <br />
-    <div>
-        <button id="submit" class="btn btn-info">Submit</button>
-    </div>
-    @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
-    {
-        <div class="col-sm-12" style="background-color:#ffaeae">
-            <span style="color:#b71616">@ViewBag.ErrorMessage</span>
+            </div>
         </div>
+        <br />
+
+        <div>
+            <button id="submit" class="btn btn-info">Submit</button>
+        </div>
+    </div>
+    @if (ViewBag.Error != null)
+    {
+        <p style="margin-left:265px; margin-top:30px;color:red">@ViewBag.Error</p>
     }
 </div>
 }
