--- a/Content/MigratorCSS/Layout.css
+++ b/Content/MigratorCSS/Layout.css
@@ -17,6 +17,13 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
+#user{
+    color:white;
+}
+#logout {
+    color: white;
+}
+
 body {
     background-color: #f3f5f9;
     font-size: 14px !important;
@@ -50,7 +57,7 @@ body {
         }
 
             .wrapper .sidebar ul li a {
-                color: #bdb8d7;
+                color: white;
                 display: block;
             }
 
@@ -82,7 +89,7 @@ body {
                 line-height: 45px;
                 text-align: center;
                 margin: 0 5px;
-                color: #bdb8d7;
+                color: white;
                 border-top-left-radius: 5px;
                 border-top-right-radius: 5px;
             }
